# simple_acceptance_study

./: ':w  :w  CMakeLists.txt  README  hodoscope.cc  simple_acceptance_study.cc  vis.mac
include/: Constants.hh  DetectorConstruction.hh  DetectorHit.hh  EventAction.hh  HodoscopeHit.hh  HodoscopeSD.hh  ParticleHit.hh  PrimaryGeneratorAction.hh  SegmentHit.hh  SolenoidMagneticField.hh  StackingAction.hh  TrackInformation.hh  TrackingAction.hh
src/: ActionInitialization.cc  DetectorConstruction.cc  DetectorHit.cc  EventAction.cc  HodoscopeHit.cc  HodoscopeSD.cc  ParticleHit.cc  PhysicsListMessenger.cc  PrimaryGeneratorAction.cc  RunAction.cc  SegmentHit.cc  SolenoidMagneticField.cc  StackingAction.cc  TrackInformation.cc  TrackingAction.cc
